:recycle: Removes Dockerfile and environment from build

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,4 +32,4 @@ Home = "https://jamalkhan.me/bandsos"
 Repo = "https://github.com/jamal919/bandsos-platform"
 
 [tool.flit.sdist]
-exclude = ["docs", "examples", "notebooks", "scripts"]
+exclude = ["docs", "examples", "notebooks", "scripts", "Dockerfile", "environment_linux.yml"]
